; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libcasper/services/cap_pwd/extr_cap_pwd.c_pwd_getpwnam.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libcasper/services/cap_pwd/extr_cap_pwd.c_pwd_getpwnam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @pwd_getpwnam to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwd_getpwnam(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.passwd*, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @nvlist_exists_string(i32* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* @EINVAL, align 4
  store i32 %14, i32* %4, align 4
  br label %34

15:                                               ; preds = %3
  %16 = load i32*, i32** %6, align 8
  %17 = call i8* @nvlist_get_string(i32* %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %17, i8** %9, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = icmp ne i8* %18, null
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  store i64 0, i64* @errno, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = call %struct.passwd* @getpwnam(i8* %22)
  store %struct.passwd* %23, %struct.passwd** %8, align 8
  %24 = load i64, i64* @errno, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %15
  %27 = load i64, i64* @errno, align 8
  %28 = trunc i64 %27 to i32
  store i32 %28, i32* %4, align 4
  br label %34

29:                                               ; preds = %15
  %30 = load i32*, i32** %5, align 8
  %31 = load %struct.passwd*, %struct.passwd** %8, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @pwd_pack(i32* %30, %struct.passwd* %31, i32* %32)
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %29, %26, %13
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @nvlist_exists_string(i32*, i8*) #1

declare dso_local i8* @nvlist_get_string(i32*, i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.passwd* @getpwnam(i8*) #1

declare dso_local i32 @pwd_pack(i32*, %struct.passwd*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
